--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,10 @@
+# remap prefix to Control + a
+set -g prefix C-a
+
+# bind 'C-a C-a' to type 'C-a'
+bind C-a send-prefix
+unbind C-b
+
 # improve colors
 set -g default-terminal 'screen-256color'
 
